# techrob-action360-agent

./: .env.example  .gitattributes  .gitignore  ACI_DEPLOYMENT.md  AZURE_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_UPDATE_LOG.md  DYNAMIC_INSTRUCTIONS.md  Dockerfile  GIT_SETUP.md  LICENSE  PHASE2_MCP_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  example_dynamic_instructions.py  example_mcp_integration.py  example_simple.py  pyproject.toml  query.ps1  requirements-docker.txt  requirements.txt  routing.ps1  run_api.py  startup.sh  web.config
.github/: copilot-instructions.md
.github/workflows/: deploy-aci.yml
config/: agent_config.yaml  instructions.md  instructions_routing.md  instructions_summary.md  mcp_tools.yaml
infra/: deploy-aci.bicep  deploy-aci.bicepparam  deploy.bicep  deploy.bicepparam
src/: __init__.py  agent.py  api.py  mcp_handler.py
src/models/: __init__.py  config.py
tests/: __init__.py  test_agent.py
